sevfruit-supplier-service: Изменен метод PriceController.add()
