# sevfruit-supplier-service/src/main/java/com/sevfruit/model/Price.java
@@ -2,6 +2,7 @@ package com.sevfruit.model;
 
 import java.util.List;
 
+import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.FetchType;
@@ -10,6 +11,9 @@ import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
+import jakarta.persistence.NamedAttributeNode;
+import jakarta.persistence.NamedEntityGraph;
+import jakarta.persistence.NamedSubgraph;
 import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
 import jakarta.persistence.UniqueConstraint;
@@ -19,6 +23,23 @@ import jakarta.persistence.UniqueConstraint;
  * @author dm
  *
  */
+@NamedEntityGraph(
+		name = "price-entity-graph",		
+		attributeNodes = {
+				@NamedAttributeNode("supplier"),
+				@NamedAttributeNode("period"),
+				@NamedAttributeNode(value = "products", subgraph = "products-subgraph")
+		},
+		subgraphs = {
+				@NamedSubgraph(
+						name = "products-subgraph", 
+						attributeNodes = { 
+								@NamedAttributeNode("product"),
+								@NamedAttributeNode("value")
+						}
+				)
+		}
+)
 @Entity
 @Table(name = "PRICE", uniqueConstraints = {@UniqueConstraint(columnNames = {"supplier_id", "period_id"})})
 public class Price {
@@ -36,7 +57,7 @@ public class Price {
 	private Period period;
 
 	/** Список продукции с ценами */
-	@OneToMany(mappedBy = "price", fetch = FetchType.LAZY)
+	@OneToMany(mappedBy = "price", fetch = FetchType.LAZY, cascade = CascadeType.PERSIST)
 	private List<PriceProduct> products;
 
 	public Price() {
@@ -49,17 +70,6 @@ public class Price {
 		this.period = period;
 	}
 	
-	public Price(int supplier_id, int period_id) {
-		super();
-		this.supplier = new Supplier(supplier_id);
-		this.period = new Period(period_id);
-	}
-	
-	public Price(int id) {
-		super();
-		this.id = id;
-	}
-		
 	public Integer getId() {
 		return id;
 	}
@@ -75,6 +85,10 @@ public class Price {
 	public void setSupplier(Supplier supplier) {
 		this.supplier = supplier;
 	}
+	
+	public void setSupplier_id(int supplier_id) {
+		this.supplier = new Supplier(supplier_id);
+	}
 
 	public Period getPeriod() {
 		return period;
@@ -82,6 +96,10 @@ public class Price {
 
 	public void setPeriod(Period period) {
 		this.period = period;
+	}
+	
+	public void setPeriod_id(int period_id) {
+		this.period = new Period(period_id);
 	}
 
 	public List<PriceProduct> getProducts() {
@@ -91,6 +109,10 @@ public class Price {
 	public void setProducts(List<PriceProduct> products) {
 		this.products = products;
 	}
-	
+
+	@Override
+	public String toString() {
+		return "Price [id=" + id + ", supplier=" + supplier + ", period=" + period + ", products=" + products + "]";
+	}
 	
 }
