# sevfruit-supplier-service/src/main/java/com/sevfruit/model/PriceProduct.java
@@ -7,6 +7,7 @@ import jakarta.persistence.EmbeddedId;
 import jakarta.persistence.Entity;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
+import jakarta.persistence.MapsId;
 import jakarta.persistence.Table;
 
 /**
@@ -18,14 +19,16 @@ import jakarta.persistence.Table;
 @Table(name = "PRICE_PRODUCT")
 public class PriceProduct {
 	@EmbeddedId
-	private PriceProductId id;
+	private PriceProductId id = new PriceProductId();
 	
 	@JoinColumn(name = "price_id", referencedColumnName = "id", nullable = false, insertable = false, updatable = false)
-	@ManyToOne(optional = false)	
+	@ManyToOne(optional = false)
+	@MapsId("price_id")
 	private Price price;
 	
 	@JoinColumn(name = "product_id", referencedColumnName = "id", nullable = false, insertable = false, updatable = false)
-	@ManyToOne(optional = false)	
+	@ManyToOne(optional = false)
+	@MapsId("product_id")
 	private Product product;
 	
 	/** Цена за тонну */
@@ -41,11 +44,6 @@ public class PriceProduct {
 		this.id = new PriceProductId(price_id, product_id);
 	}
 	
-	public PriceProduct(int product_id) {
-		super();
-		this.id = new PriceProductId(0, product_id);
-	}
-	
 	public PriceProduct(int price_id, int product_id, @NonNull Float value) {
 		super();
 		this.id = new PriceProductId(price_id, product_id);
@@ -54,7 +52,8 @@ public class PriceProduct {
 
 	public PriceProduct(@NonNull Price price, @NonNull Product product, @NonNull Float value) {
 		super();
-		this.id = new PriceProductId(price.getId(), product.getId());
+		this.price = price;
+		this.product = product;
 		this.value = value;
 	}
 
@@ -65,6 +64,10 @@ public class PriceProduct {
 	public void setId(PriceProductId id) {
 		this.id = id;
 	}
+	
+	public void setPrice(Price price) {
+		this.price = price;
+	}
 
 	public Product getProduct() {
 		return product;
@@ -72,6 +75,10 @@ public class PriceProduct {
 
 	public void setProduct(Product product) {
 		this.product = product;
+	}
+	
+	public void setProduct_id(int product_id) {
+		this.product = new Product(product_id);
 	}
 
 	public Float getValue() {
@@ -84,7 +91,7 @@ public class PriceProduct {
 
 	@Override
 	public String toString() {
-		return "PriceProduct [id=" + id + ", price=" + price + ", product=" + product + ", value=" + value + "]";
+		return "PriceProduct [id=" + id + ", price_id=" + (price!=null?price.getId():null) + ", product=" + product + ", value=" + value + "]";
 	}
 	
 }
