# sevfruit-supplier-service/src/main/java/com/sevfruit/service/PriceController.java
@@ -1,5 +1,6 @@
 package com.sevfruit.service;
 
+import java.net.URI;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -8,8 +9,9 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -17,10 +19,9 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import com.sevfruit.model.Price;
-import com.sevfruit.model.PriceProduct;
-import com.sevfruit.repo.PriceProductRepository;
 import com.sevfruit.repo.PriceRepository;
 
 /**
@@ -33,14 +34,13 @@ import com.sevfruit.repo.PriceRepository;
 public class PriceController {
 	private static final Logger logger = LoggerFactory.getLogger(PriceController.class);
 	
+	private static final Sort sortById = Sort.by("id");
+	
 	@Autowired
 	private MessageSource msgSrc;
 	
 	@Autowired
 	private PriceRepository priceRepository;
-	
-	@Autowired
-	private PriceProductRepository priceProductRepository;
 	
 	/**
 	 * Список всех прайс листов <br/>
@@ -50,7 +50,7 @@ public class PriceController {
 	@GetMapping("")
 	public List<Price> getAll()
 	{
-		return priceRepository.findAll();
+		return priceRepository.findAll(sortById);
 	}
 	
 	/**
@@ -76,28 +76,24 @@ public class PriceController {
 	
 	/**
 	 * Добавить новый прайс лист <br/>
-	 * {@code curl -w '\n' -D - -X POST -H "Api-Key: 12345" -H "Content-type: application/json" -d '{"supplier": 3, "period": 4, "products": [{"product": 1, "value":111000}]}' http://localhost:8080/price}
+	 * {@code curl -w '\n' -D - -X POST -H "Api-Key: 12345" -H "Content-type: application/json" -d '{"supplier_id": 3, "period_id": 4, "products": [{"product_id": 1, "value":111000}]}' http://localhost:8080/price}
 	 * @param price
 	 * @return
 	 */
 	@PostMapping("")
-	@Transactional
-	public Price add(@RequestBody Price price)
-	{
+	public ResponseEntity<Price> add(@RequestBody Price price)
+	{		
 		try
 		{
 			final Price newPrice = priceRepository.save(price);
-			if (price.getProducts() != null)
-			{
-				price.getProducts().forEach(pp -> {
-					if (pp.getProduct() != null)
-						priceProductRepository.save(new PriceProduct(newPrice.getId(), pp.getProduct().getId(), pp.getValue()));
-				});
-			}
 				
-			return newPrice;
+			final URI location = ServletUriComponentsBuilder.fromCurrentRequestUri()
+					.pathSegment("{price_id}").buildAndExpand(newPrice.getId()).toUri();
+			
+			return ResponseEntity.created(location).body(newPrice);
 		} catch (Exception e)
 		{
+			logger.error("PriceController.add() failed: ", e);
 			throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, e.getMessage());
 		}
 	}
